[package]
name = "rbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
log = ">=0.4.13, <0.4.14" # json_env_logger cannot be compiled with newer versions
json_env_logger = { version = "0.1.1", features = ["backtrace", "iso-timestamps"] }
http = "1.1.0"
prost = "0.12.6"
tarantool = "4.0.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[lib]
test = false
crate-type = ["cdylib"]
